--- a/resources/style.css
+++ b/resources/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url(resources/tweed.jpeg);
+  background-image: url(tweed.jpeg);
   background-repeat: repeat;
   background-attachment: fixed;
   margin: 0;
@@ -28,6 +28,7 @@ header {
   color: white;
   text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
   padding-bottom: 25px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 .nav, .nav ul {
@@ -64,6 +65,11 @@ header {
   width: 50%;
 }
 
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .left h1 {
   padding: 0;
   margin: 0;
@@ -71,7 +77,7 @@ header {
   line-height: 40px;
 }
 .left button {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   color: white;
   font-weight: bold;
   font-size: 16px;
@@ -93,6 +99,10 @@ header {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
+.info {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
 .info h2, .info p {
   color: white;
   text-align: center;
@@ -102,16 +112,83 @@ header {
 .items {
   display: flex;
   flex-direction: row;
-  gap: 25px;
+  justify-content: space-between;
 }
 .items div {
   text-align: center;
+  width: 175px;
 }
 .items div img {
-  width: 150px;
-  height: 150px;
+  width: 175px;
+  height: 175px;
   -o-object-fit: cover;
      object-fit: cover;
   border: 5px solid white;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.quote {
+  background-color: white;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
+  padding: 25px;
+}
+.quote p {
+  margin: 0;
+}
+
+.quote-text {
+  font: 1.75rem Georgia, Times, serif;
+  font-style: italic;
+}
+
+.quote-author {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.quote-author::before {
+  content: "- ";
+}
+
+.action {
+  margin-top: 25px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.action div {
+  width: 100%;
+}
+.action div h3, .action div p {
+  color: white;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+.action div p {
+  margin-top: 0;
+}
+.action div h3 {
+  margin-bottom: 5px;
+}
+.action button {
+  width: 125px;
+  height: 50px;
+  background: transparent;
+  color: white;
+  font-weight: bold;
+  border: 1px solid white;
+  border-radius: 25px;
+}
+.action button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+footer {
+  margin-top: 25px;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  padding: 25px;
+  text-align: center;
+  color: white;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
 }/*# sourceMappingURL=style.css.map */
